--- a/src/index.css
+++ b/src/index.css
@@ -31,3 +31,10 @@ main {
 header h1 {
   text-align: center;
 }
+
+img {
+  display: block;
+  max-width: 50%;
+  height: auto;
+  margin-left: 30%;
+}
